--- a/register.html
+++ b/register.html
@@ -3,203 +3,123 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Register — Realtime Chat</title>
+<title>Register — Hybrid Chat</title>
 <link rel="icon" type="image/png" href="hybrid.png">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
 <style>
 :root {
-  --bg: #0d1117;
-  --card: #161b22;
-  --border: #30363d;
-  --accent: #8b5cf6;
-  --accent-hover: #7c3aed;
-  --muted: #9ca3af;
-  --text: #e6edf3;
-  --glass: rgba(255,255,255,0.04);
+  --accent:#6366f1;
+  --accent-hover:#4f46e5;
+  --bg:#f9fafb;
+  --card:#ffffff;
+  --text:#111827;
+  --muted:#6b7280;
+  --shadow:rgba(0,0,0,0.08);
 }
 
-* { box-sizing: border-box; font-family: 'Inter', system-ui, sans-serif; }
-
-body {
-  margin: 0;
-  background: radial-gradient(circle at top, #111827 0%, #0d1117 80%);
-  color: var(--text);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  overflow: hidden;
+*{box-sizing:border-box;margin:0;padding:0;font-family:Inter,sans-serif;}
+body{height:100vh;background:var(--bg);display:flex;align-items:center;justify-content:center;}
+.reg-card{
+  background:var(--card);
+  padding:32px 28px;
+  border-radius:16px;
+  width:100%;
+  max-width:400px;
+  box-shadow:0 8px 24px var(--shadow);
+  text-align:center;
+}
+.reg-card h2{
+  font-size:24px;
+  font-weight:700;
+  margin-bottom:24px;
+  color:var(--text);
+}
+.input-field{display:flex;flex-direction:column;align-items:flex-start;margin-bottom:20px;text-align:left;}
+.input-field label{font-size:14px;color:var(--muted);margin-bottom:6px;}
+.input-field input[type="text"]{
+  width:100%;
+  padding:12px 16px;
+  font-size:15px;
+  border:1px solid #e5e7eb;
+  border-radius:8px;
+  outline:none;
+  transition:all 0.2s ease;
+}
+.input-field input[type="text"]:focus{
+  border-color:var(--accent);
+  box-shadow:0 4px 12px var(--shadow);
 }
 
-.reg-card {
-  background: var(--card);
-  border: 1px solid var(--border);
-  border-radius: 16px;
-  padding: 36px 32px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  width: 380px;
-  box-shadow: 0 0 40px rgba(0,0,0,0.5);
-  backdrop-filter: blur(12px);
-  animation: fadeIn 0.8s ease;
+.upload-box{
+  width:100%;
+  padding:20px;
+  border:2px dashed #e5e7eb;
+  border-radius:12px;
+  cursor:pointer;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  transition:all 0.2s ease;
+  background:#f3f4f6;
+}
+.upload-box:hover{border-color:var(--accent);background:#eef2ff;}
+.upload-box img{width:80px;height:80px;border-radius:50%;object-fit:cover;}
+
+.save-btn{
+  width:100%;
+  padding:14px;
+  background:var(--accent);
+  color:#fff;
+  font-size:16px;
+  font-weight:600;
+  border:none;
+  border-radius:12px;
+  cursor:pointer;
+  transition:all 0.2s ease;
+}
+.save-btn:hover{background:var(--accent-hover);}
+
+footer{
+  margin-top:20px;
+  font-size:12px;
+  color:var(--muted);
 }
 
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(10px); }
-  to { opacity: 1; transform: translateY(0); }
+.alert-overlay{
+  position:fixed;
+  top:0;left:0;right:0;bottom:0;
+  background:rgba(0,0,0,0.5);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  opacity:0;
+  pointer-events:none;
+  transition:opacity 0.3s ease;
 }
-
-h2 {
-  text-align: center;
-  margin: 0;
-  font-size: 1.6em;
-  font-weight: 600;
-  color: #fff;
+.alert-overlay.show{opacity:1;pointer-events:auto;}
+.alert-box{
+  background:var(--card);
+  padding:24px 28px;
+  border-radius:16px;
+  text-align:center;
+  box-shadow:0 8px 24px var(--shadow);
 }
-
-.input-field {
-  display: flex;
-  flex-direction: column;
-  gap: 6px;
+.alert-box i{
+  font-size:28px;
+  color:#f87171;
+  margin-bottom:12px;
 }
-
-label {
-  font-size: 0.9em;
-  color: var(--muted);
+.alert-box p{margin-bottom:16px;color:var(--text);}
+.alert-btn{
+  padding:10px 20px;
+  background:var(--accent);
+  color:#fff;
+  border:none;
+  border-radius:12px;
+  cursor:pointer;
 }
-
-input[type="text"] {
-  padding: 12px;
-  border-radius: 10px;
-  border: 1px solid var(--border);
-  background: var(--glass);
-  color: #fff;
-  outline: none;
-  transition: border-color 0.2s, background 0.2s;
-}
-
-input[type="text"]:focus {
-  border-color: var(--accent);
-  background: rgba(139, 92, 246, 0.1);
-}
-
-.upload-box {
-  height: 180px;
-  border: 2px dashed var(--border);
-  border-radius: 12px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 8px;
-  cursor: pointer;
-  transition: border-color 0.2s, background 0.2s;
-}
-
-.upload-box:hover {
-  border-color: var(--accent);
-  background: rgba(139, 92, 246, 0.05);
-}
-
-.upload-box img {
-  border-radius: 12px;
-  width: 100px;
-  height: 100px;
-  object-fit: cover;
-  box-shadow: 0 0 8px rgba(139,92,246,0.4);
-  border: 2px solid rgba(255,255,255,0.08);
-}
-
-.save-btn {
-  padding: 14px;
-  border-radius: 10px;
-  border: none;
-  background: linear-gradient(90deg, var(--accent), #4f46e5);
-  cursor: pointer;
-  color: white;
-  font-weight: 600;
-  font-size: 1em;
-  letter-spacing: 0.3px;
-  transition: all 0.25s ease;
-  box-shadow: 0 4px 15px rgba(124,58,237,0.3);
-}
-
-.save-btn:hover {
-  background: linear-gradient(90deg, var(--accent-hover), #4338ca);
-  transform: translateY(-1px);
-  box-shadow: 0 6px 20px rgba(124,58,237,0.4);
-}
-
-footer {
-  text-align: center;
-  color: var(--muted);
-  font-size: 0.85em;
-  margin-top: 12px;
-  opacity: 0.7;
-}
-
-.alert-overlay {
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,0.6);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.25s ease;
-  z-index: 1000;
-}
-
-.alert-overlay.show {
-  opacity: 1;
-  pointer-events: all;
-}
-
-.alert-box {
-  background: var(--card);
-  border: 1px solid var(--border);
-  border-radius: 12px;
-  padding: 24px 28px;
-  max-width: 360px;
-  text-align: center;
-  box-shadow: 0 8px 30px rgba(0,0,0,0.5);
-  animation: popIn 0.25s ease;
-}
-
-@keyframes popIn {
-  from { transform: scale(0.9); opacity: 0; }
-  to { transform: scale(1); opacity: 1; }
-}
-
-.alert-box i {
-  font-size: 42px;
-  color: var(--accent);
-  margin-bottom: 12px;
-}
-
-.alert-box p {
-  font-size: 1em;
-  color: var(--text);
-  margin-bottom: 18px;
-}
-
-.alert-btn {
-  padding: 10px 20px;
-  border: none;
-  border-radius: 8px;
-  background: var(--accent);
-  color: #fff;
-  font-weight: 600;
-  cursor: pointer;
-  transition: background 0.2s;
-}
-
-.alert-btn:hover {
-  background: var(--accent-hover);
-}
+.alert-btn:hover{background:var(--accent-hover);}
 </style>
 </head>
 <body>
@@ -216,7 +136,7 @@ footer {
     <label>Profile Image</label>
     <div class="upload-box" id="uploadBox">
       <i class="fas fa-user-circle" style="font-size:54px;color:var(--muted)"></i>
-      <p style="font-size:0.9em;color:var(--muted);margin:0;">Click to upload</p>
+      <p style="font-size:0.9em;color:var(--muted);margin-top:6px;">Click to upload</p>
       <input type="file" id="fileInput" accept="image/*" style="display:none;">
     </div>
   </div>
