--- a/index.html
+++ b/index.html
@@ -3,121 +3,86 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Realtime Chat</title>
+<title>Realtime Chat — Hybrid</title>
 <link rel="icon" type="image/png" href="hybrid.png">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
 <style>
 :root {
-  --bg: #0d1117;
-  --card: #161b22;
-  --border: #30363d;
-  --accent: #8b5cf6;
-  --accent-hover: #7c3aed;
-  --text: #e6edf3;
-  --muted: #9ca3af;
-  --glass: rgba(255,255,255,0.04);
+  --accent: #6366f1;
+  --accent-hover: #4f46e5;
+  --bg: #f9fafb;
+  --card: #ffffff;
+  --text: #111827;
+  --muted: #6b7280;
+  --shadow: rgba(0,0,0,0.08);
 }
 
-* { box-sizing: border-box; font-family: 'Inter', system-ui, sans-serif; }
+*{box-sizing:border-box;margin:0;padding:0;font-family:Inter,sans-serif;}
+body{height:100vh;background:var(--bg);display:flex;align-items:center;justify-content:center;}
 
-body {
-  margin: 0;
-  background: radial-gradient(circle at top, #111827 0%, #0d1117 80%);
-  color: var(--text);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-}
-
-.chat-card {
+.chat-card{
   background: var(--card);
-  border: 1px solid var(--border);
+  padding: 36px 32px;
   border-radius: 16px;
-  width: 400px;
-  max-width: 90%;
-  padding: 40px 32px;
+  width: 100%;
+  max-width: 420px;
+  box-shadow: 0 12px 36px var(--shadow);
+  text-align: center;
   display: flex;
   flex-direction: column;
-  gap: 24px;
-  box-shadow: 0 12px 40px rgba(0,0,0,0.6);
-  backdrop-filter: blur(12px);
-  animation: fadeIn 0.8s ease;
-  text-align: center;
+  gap: 20px;
 }
 
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(10px);}
-  to { opacity: 1; transform: translateY(0);}
+.chat-card h1{
+  font-size: 28px;
+  font-weight: 700;
+  color: var(--text);
 }
 
-.chat-card h1 {
-  margin: 0;
-  font-size: 2em;
-  font-weight: 600;
-  background: linear-gradient(90deg, #7c3aed, #4f46e5);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.chat-card p {
-  font-size: 1em;
+.chat-card p{
+  font-size: 15px;
   color: var(--muted);
-  margin: 0;
 }
 
-.button-group {
+.button-group{
   display: flex;
   flex-direction: column;
   gap: 12px;
+  width: 100%;
 }
 
-.button-group button {
-  padding: 14px;
-  border: none;
-  border-radius: 12px;
+.button-group button{
+  padding: 14px 20px;
+  font-size: 16px;
   font-weight: 600;
+  border-radius: 12px;
+  border: none;
   cursor: pointer;
-  font-size: 1em;
-  transition: all 0.25s ease;
-  box-shadow: 0 4px 15px rgba(124,58,237,0.3);
+  transition: all 0.2s ease;
 }
 
-#startBtn {
-  background: linear-gradient(90deg, var(--accent), #4f46e5);
+#startBtn{
+  background: var(--accent);
   color: #fff;
 }
 
-#startBtn:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 6px 20px rgba(124,58,237,0.5);
-  background: linear-gradient(90deg, var(--accent-hover), #4338ca);
+#startBtn:hover{
+  background: var(--accent-hover);
 }
 
-#removeBtn {
-  background: rgba(248,113,113,0.85);
+#removeBtn{
+  background: #f87171;
   color: #fff;
 }
 
-#removeBtn:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 6px 20px rgba(248,113,113,0.5);
+#removeBtn:hover{
+  background: #ef4444;
 }
 
-footer {
-  font-size: 0.8em;
+footer{
+  font-size: 12px;
   color: var(--muted);
-  opacity: 0.7;
-  margin-top: 8px;
-}
-
-@media (max-width:480px){
-  .chat-card {
-    padding: 32px 20px;
-  }
-  .chat-card h1 { font-size: 1.6em; }
-  .button-group button { font-size: 0.95em; padding: 12px; }
+  margin-top: 12px;
 }
 </style>
 </head>
@@ -127,7 +92,7 @@ footer {
   <h1>Realtime Chat</h1>
   <p id="info">Connect instantly with friends</p>
   <div class="button-group">
-    <button id="startBtn">Get Started</button>
+    <button id="startBtn"><i class="fas fa-paper-plane"></i> Get Started</button>
   </div>
   <footer>© 2025 Dominex Macedon</footer>
 </div>
@@ -146,7 +111,7 @@ if(profileData){
 
   const removeBtn = document.createElement('button');
   removeBtn.id = 'removeBtn';
-  removeBtn.textContent = 'Remove Account';
+  removeBtn.innerHTML = '<i class="fas fa-trash"></i> Remove Account';
   buttonsDiv.appendChild(removeBtn);
 
   removeBtn.addEventListener('click', ()=>{
@@ -154,7 +119,7 @@ if(profileData){
     location.reload();
   });
 
-  startBtn.textContent = 'Continue Chat';
+  startBtn.innerHTML = '<i class="fas fa-comment-dots"></i> Continue Chat';
   startBtn.addEventListener('click', ()=>{
     window.location.href='home.html';
   });
@@ -173,5 +138,6 @@ document.addEventListener('keydown', e => {
   ) { e.preventDefault(); e.stopPropagation(); }
 });
 </script>
+
 </body>
 </html>
